src/rules/flake8_return/snapshots/ruff__flake8_return__tests__RET502_RET502.py.snap
---
source: src/flake8_return/mod.rs
expression: checks
---
- kind:
    ImplicitReturnValue: ~
  location:
    row: 3
    column: 8
  end_location:
    row: 3
    column: 14
  fix:
    content: return None
    location:
      row: 3
      column: 8
    end_location:
      row: 3
      column: 14
  parent: ~

