src/rules/flake8_return/snapshots/ruff__flake8_return__tests__RET504_RET504.py.snap
---
source: src/flake8_return/mod.rs
expression: checks
---
- kind:
    UnnecessaryAssign: ~
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 12
  fix: ~
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 13
    column: 11
  end_location:
    row: 13
    column: 12
  fix: ~
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 19
    column: 15
  end_location:
    row: 19
    column: 16
  fix: ~
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 31
    column: 11
  end_location:
    row: 31
    column: 17
  fix: ~
  parent: ~
- kind:
    UnnecessaryAssign: ~
  location:
    row: 39
    column: 11
  end_location:
    row: 39
    column: 20
  fix: ~
  parent: ~

