src/rules/flake8_return/snapshots/ruff__flake8_return__tests__RET505_RET505.py.snap
---
source: src/flake8_return/mod.rs
expression: checks
---
- kind:
    SuperfluousElseReturn: Elif
  location:
    row: 5
    column: 4
  end_location:
    row: 13
    column: 16
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Elif
  location:
    row: 17
    column: 4
  end_location:
    row: 26
    column: 13
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Elif
  location:
    row: 38
    column: 4
  end_location:
    row: 46
    column: 16
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Else
  location:
    row: 50
    column: 4
  end_location:
    row: 55
    column: 16
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Else
  location:
    row: 61
    column: 8
  end_location:
    row: 66
    column: 20
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Else
  location:
    row: 73
    column: 4
  end_location:
    row: 80
    column: 13
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Else
  location:
    row: 86
    column: 8
  end_location:
    row: 90
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseReturn: Else
  location:
    row: 97
    column: 4
  end_location:
    row: 103
    column: 23
  fix: ~
  parent: ~

