src/rules/flake8_return/snapshots/ruff__flake8_return__tests__RET507_RET507.py.snap
---
source: src/flake8_return/mod.rs
expression: checks
---
- kind:
    SuperfluousElseContinue: Elif
  location:
    row: 6
    column: 8
  end_location:
    row: 11
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Elif
  location:
    row: 16
    column: 8
  end_location:
    row: 25
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Else
  location:
    row: 34
    column: 8
  end_location:
    row: 37
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Else
  location:
    row: 44
    column: 12
  end_location:
    row: 49
    column: 24
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Else
  location:
    row: 57
    column: 8
  end_location:
    row: 64
    column: 17
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Else
  location:
    row: 71
    column: 12
  end_location:
    row: 75
    column: 21
  fix: ~
  parent: ~
- kind:
    SuperfluousElseContinue: Else
  location:
    row: 83
    column: 8
  end_location:
    row: 89
    column: 24
  fix: ~
  parent: ~

